# zephyr-meta

./: .gitignore  .gitmodules  LICENSE  README.md
docs/: UPGRADING_ZEPHYR.md
lib/common/: README.md  error_handling.c  error_handling.h  gpio_helpers.c  gpio_helpers.h
scripts/: build-all.sh  check-zephyr-version.sh  flash-board.sh  new-project.sh  update-all.sh  update-zephyr-version.sh
standards/: .clang-format  .editorconfig  CODING_STYLE.md  PROJECT_STRUCTURE.md
templates/: .gitignore  west.yml
templates/app/: CMakeLists.txt  prj.conf
templates/app/src/: main.c
templates/devcontainer/: devcontainer.json  setup.sh
